--- a/ExViewer/Themes/Generic.xaml
+++ b/ExViewer/Themes/Generic.xaml
@@ -6,8 +6,7 @@
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                     mc:Ignorable="d"
                     xmlns:tk="using:Microsoft.Toolkit.Uwp.UI.Controls"
-                    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                    xmlns:pr="using:PullToRefresh.UWP">
+                    xmlns:d="http://schemas.microsoft.com/expression/blend/2008">
     <Style TargetType="controls:SplitViewButton">
         <Setter Property="Background"
                 Value="Transparent" />
