--- a/ExViewer/App.xaml
+++ b/ExViewer/App.xaml
@@ -1,6 +1,7 @@
 ﻿<Application x:Class="ExViewer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             RequiresPointerMode="WhenRequested">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
