--- a/ExViewer/Views/SearchPage.xaml
+++ b/ExViewer/Views/SearchPage.xaml
@@ -2,15 +2,11 @@
       x:Name="root"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:local="using:ExViewer.Views"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:tk="using:Microsoft.Toolkit.Uwp.UI.Controls"
-      xmlns:vm="using:ExViewer.ViewModels"
-      xmlns:db="using:ExViewer.Database"
       mc:Ignorable="d"
       xmlns:controls="using:ExViewer.Controls"
-      xmlns:client="using:ExClient"
       NavigationCacheMode="Enabled">
     <Page.Transitions>
         <TransitionCollection>
@@ -58,6 +54,7 @@
                               VerticalScrollBarVisibility="Hidden">
                     <StackPanel>
                         <controls:CategorySelector x:Name="cs_Category"
+                                                   MaxWidth="560"
                                                    XYFocusDown="{x:Bind ts_Advanced}"
                                                    SelectedCategory="{x:Bind VM.Category, Mode=TwoWay}"
                                                    HorizontalAlignment="Center" />
